<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CopterRemote</string>
    <string name="btn_zero">\u25BC</string>
    <string name="btn_connect">CONNECT</string>
    <string name="btn_disconnect">DISCONNECT</string>
    <!--  -->
    <string name="title_settings">Settings</string>
    <string name="preferences_ip">IP-Address</string>
    <string name="preferences_port">Port</string>
    <string name="preferences_thr_max">Maximum throttle</string>
    <string name="preferences_thr_min">Minimum throttle</string>
    <string name="preferences_thr_steps">Steps you change throttle with</string>
    <!--  -->

</resources>